# PG

./: .clang-format  .gitignore  .gitmodules  README.md
PG.xcworkspace/: contents.xcworkspacedata
PG/animation/: AnimationUpdater.cpp  AnimationUpdater.h  IAnimation.h  MoveToAnimation.cpp  MoveToAnimation.h  TextureAnimation.cpp  TextureAnimation.h  TextureAnimationDefinition.h  TextureAnimationUtils.cpp  TextureAnimationUtils.h
PG/app/: AppConfiguration.h  AppHostServices.h  GameConstants.h  IAppController.h  IGameController.h  IPlatformServices.h  KeyCodeUtils.cpp  KeyCodeUtils.h  PGAppHost.cpp  PGAppHost.h  StyleSheet.h
PG/console/: CommandSetHandle.cpp  CommandSetHandle.h  CommandSetRemover.cpp  CommandSetRemover.h  Console.cpp  Console.h  ConsoleCommand.h  ConsoleCommandArgument.h  ConsoleCommandArgumentType.h  ConsoleCommandRegistry.cpp  ConsoleCommandRegistry.h  ConsoleController.cpp  ConsoleController.h  InputParser.cpp  InputParser.h  RawConsoleCommand.h
PG/core/: Alignment.h  BindableValue.h  Colour.cpp  Colour.h  KeyCode.h  MathsUtils.h  PGKeyCode.h  PGRectUtils.cpp  PGRectUtils.h  Point.cpp  Point.h  PointUtils.cpp  PointUtils.h  Rect.cpp  Rect.h  RectUtils.cpp  RectUtils.h  Size.cpp  Size.h  SizeUtils.cpp  SizeUtils.h  TileCoord.cpp  TileCoord.h  ValueRange.h
PG/data/: AttributeConstants.cpp  AttributeConstants.h  Attributes.cpp  Attributes.h  DataGrid.cpp  DataGrid.h  DataGridUtils.h  EntityHandle.h  EntityLoader.cpp  EntityLoader.h  GeometryLoader.cpp  GeometryLoader.h
PG/docs/: doxygen.config
PG/entities/: Tile.cpp  Tile.h  TilePositionCalculator.cpp  TilePositionCalculator.h
PG/graphics/: Camera.cpp  Camera.h  Node.h  NodeCreator.h  Scene.h  TextureMeasurer.cpp  TextureMeasurer.h  View.h  ViewHandle.h
PG/internal/app/: GameConstants.cpp  WinPlatformServices.cpp
PG/internal/graphics/: SFMLNode.cpp  SFMLNode.h  SFMLScene.cpp  SFMLScene.h  SFMLTextureMeasurer.cpp  SFMLTextureMeasurer.h  SFMLView.cpp  SFMLView.h  SFMLViewHandle.h
PG/internal/input/: KeyCodeUtils.h  PGKeyCodeUtils.h
PG/internal/platform/: LinuxPlatformServices.cpp  LinuxPlatformServices.h  LinuxResourceHandler.cpp  LinuxResourceHandler.h  MacAppController.h  MacAppController.mm  MacPlatformServices.h  MacPlatformServices.mm  MacResourceHandler.h  MacResourceHandler.mm  PileResourceHandler.cpp  PileResourceHandler.h  ResourceHandler.cpp  ResourceHandler.h  WinAppController.h  WinPlatformServices.h  WinResourceHandler.cpp  WinResourceHandler.h
PG/internal/sound/: SFMLSoundController.cpp  SFMLSoundController.h
PG/internal/ui/: Console.cpp  Console.h
PG/inventory/: Inventory.cpp  Inventory.h  InventoryItem.h
PG/io/: IResourceHandler.h
PG/menu/: MenuLayer.cpp  MenuLayer.h  MenuManager.cpp  MenuManager.h  MenuNode.cpp  MenuNode.h
PG/physics/: PhysicsBody.cpp  PhysicsBody.h  PhysicsBodyAndNode.h  PhysicsBodyCollection.cpp  PhysicsBodyCollection.h  PhysicsBodyInputHandler.cpp  PhysicsBodyInputHandler.h  PhysicsWorld.cpp  PhysicsWorld.h  PhysicsWorldParams.h
PG/projects/: CMakeLists.txt  PG.sln  PG.vcxproj  PG.vcxproj.filters  pg_cmake.txt
PG/projects/PG.xcodeproj/: project.pbxproj
PG/sound/: ISoundController.h  Sound.h  SoundID.cpp  SoundID.h
PG/ui/: Bar.cpp  Bar.h  Button.cpp  Button.h  Dialog.cpp  Dialog.h  PGButton.cpp  PGButton.h  PGDialog.cpp  PGDialog.h  PGTagReceiver.h  PGUI.cpp  PGUI.h  PGUIElement.cpp  PGUIElement.h  PGUIMessage.cpp  PGUIMessage.h  PGUIMessageQueuePoster.cpp  PGUIMessageQueuePoster.h  PGUIUtils.cpp  PGUIUtils.h  TagReceiver.h  UI.cpp  UI.h  UIElement.cpp  UIElement.h  UIMessage.cpp  UIMessage.h  UIMessageQueuePoster.cpp  UIMessageQueuePoster.h  UIPositionCalculator.cpp  UIPositionCalculator.h  UIUtils.cpp  UIUtils.h
PG/util/: JsonUtils.cpp  JsonUtils.h  Logger.cpp  Logger.h
PGTemplateApp/: CMakeLists.txt
PGTemplateApp/PGTemplateApp/: AppController.cpp  AppController.h  Info.plist  MainMenuScene.cpp  MainMenuScene.h  main.cpp
PGTemplateApp/PGTemplateApp/resources/: resources.json
PGTestApp/: CMakeLists.txt  PGTestApp.vcxproj  PGTestApp.vcxproj.filters  pg_cmake.txt  stockpile_cmake.txt
PGTestApp/PGTestApp/: AnimationsTestScene.cpp  AnimationsTestScene.h  BarTestScene.cpp  BarTestScene.h  ButtonsTestScene.cpp  ButtonsTestScene.h  CameraTestScene.cpp  CameraTestScene.h  Info.plist  InventoryTestScene.cpp  InventoryTestScene.h  MainMenuScene.cpp  MainMenuScene.h  PGTestAppController.cpp  PGTestAppController.h  PhysicsTestScene.cpp  PhysicsTestScene.h  SoundTestScene.cpp  SoundTestScene.h  TagConstants.h  main.cpp  main.mm
PGTestApp/PGTestApp.xcodeproj/: project.pbxproj
PGTestApp/PGTestApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PGTestApp/PGTestApp/AppIcon.xcassets/AppIcon.appiconset/: Contents.json
PGTestApp/PGTestApp/resources/: blur.shader  lighting.shader  resources.json
PGTests/: CMakeLists.txt  PGTests.vcxproj  PGTests.vcxproj.filters  stdafx.cpp
PGTests/PGTests/: ConsoleTests.cpp  CoreDataTests.cpp  CoreTests.cpp  GeometryTests.cpp  PhysicsTests.cpp  TestPlatformServices.h  TestResourceHandler.h  TestSoundController.h  UITests.cpp  main.cpp  testdata.json  testgeometry.geometry
PGTests/PGTests.xcodeproj/: project.pbxproj
PGTests/PGTests.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
