cmake_minimum_required(VERSION 3.0)
project(PG)

set(CMAKE_BUILD_TYPE RELEASE)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(BOOST_ROOT $ENV{BOOST_DIR})
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
find_package(Boost REQUIRED)

include_directories(
	"../.."
	"../internal/sfml/include"
	${Boost_INCLUDE_DIRS}
	"../thirdparty/stockpile"
)

set(SRCS
	../../PG/animation/AnimationUpdater.cpp
	../../PG/animation/AnimationUpdater.h
	../../PG/animation/IAnimation.h
	../../PG/animation/MoveToAnimation.cpp
	../../PG/animation/MoveToAnimation.h
	../../PG/animation/TextureAnimation.cpp
	../../PG/animation/TextureAnimation.h
	../../PG/animation/TextureAnimationDefinition.h
	../../PG/animation/TextureAnimationUtils.cpp
	../../PG/animation/TextureAnimationUtils.h
	../../PG/app/AppConfiguration.h
	../../PG/app/AppHostServices.h
	../../PG/app/GameConstants.h
	../../PG/app/IPlatformServices.h
	../../PG/app/IGameController.h
	../../PG/app/KeyCodeUtils.cpp
	../../PG/app/KeyCodeUtils.h
	../../PG/app/PGAppHost.cpp
	../../PG/app/PGAppHost.h
	../../PG/app/StyleSheet.h
	../../PG/console/CommandSetHandle.cpp
	../../PG/console/CommandSetHandle.h
	../../PG/console/CommandSetRemover.cpp
	../../PG/console/CommandSetRemover.h
	../../PG/console/ConsoleCommandArgument.h
	../../PG/console/ConsoleCommandArgumentType.h
	../../PG/console/ConsoleCommandRegistry.cpp
	../../PG/console/ConsoleCommandRegistry.h
	../../PG/console/ConsoleController.cpp
	../../PG/console/ConsoleController.h
	../../PG/console/InputParser.cpp
	../../PG/console/InputParser.h
	../../PG/console/RawConsoleCommand.h
	../../PG/core/Colour.cpp
	../../PG/core/Colour.h
	../../PG/core/MathsUtils.h
	../../PG/core/KeyCode.h
	../../PG/core/RectUtils.cpp
	../../PG/core/RectUtils.h
	../../PG/core/Point.cpp
	../../PG/core/Point.h
	../../PG/core/PointUtils.cpp
	../../PG/core/PointUtils.h
	../../PG/core/Rect.cpp
	../../PG/core/Rect.h
	../../PG/core/Size.cpp
	../../PG/core/Size.h
	../../PG/core/SizeUtils.cpp
	../../PG/core/SizeUtils.h
	../../PG/core/Colour.cpp
	../../PG/core/Colour.h
	../../PG/core/TileCoord.cpp
	../../PG/core/TileCoord.h
	../../PG/core/ValueRange.h
	../../PG/data/AttributeConstants.cpp
	../../PG/data/AttributeConstants.h
	../../PG/data/Attributes.cpp
	../../PG/data/Attributes.h
	../../PG/data/DataGrid.cpp
	../../PG/data/DataGrid.h
	../../PG/data/DataGridUtils.h
	../../PG/data/EntityHandle.h
	../../PG/data/EntityLoader.cpp
	../../PG/data/EntityLoader.h
	../../PG/entities/Tile.cpp
	../../PG/entities/Tile.h
	../../PG/entities/TilePositionCalculator.cpp
	../../PG/entities/TilePositionCalculator.h
	../../PG/graphics/Camera.cpp
	../../PG/graphics/Camera.h
	../../PG/graphics/Node.h
	../../PG/graphics/NodeCreator.h
	../../PG/graphics/Scene.h
	../../PG/graphics/TextureMeasurer.cpp
	../../PG/graphics/TextureMeasurer.h
	../../PG/graphics/View.h
	../../PG/internal/app/GameConstants.cpp
	../../PG/internal/graphics/SFMLNode.cpp
	../../PG/internal/graphics/SFMLNode.h
	../../PG/internal/graphics/SFMLScene.cpp
	../../PG/internal/graphics/SFMLScene.h
	../../PG/internal/graphics/SFMLTextureMeasurer.cpp
	../../PG/internal/graphics/SFMLTextureMeasurer.h
	../../PG/internal/graphics/SFMLView.cpp
	../../PG/internal/graphics/SFMLView.h
	../../PG/internal/input/KeyCodeUtils.h
	../../PG/internal/platform/PileResourceHandler.cpp
	../../PG/internal/platform/PileResourceHandler.h
	../../PG/internal/platform/ResourceHandler.cpp
	../../PG/internal/platform/ResourceHandler.h
	../../PG/internal/sound/SFMLSoundController.cpp
	../../PG/internal/sound/SFMLSoundController.h
	../../PG/internal/ui/Console.cpp
	../../PG/internal/ui/Console.h
	../../PG/inventory/Inventory.cpp
	../../PG/inventory/Inventory.h
	../../PG/inventory/InventoryItem.h
	../../PG/io/IResourceHandler.h
	../../PG/physics/PhysicsBody.cpp
	../../PG/physics/PhysicsBody.h
	../../PG/physics/PhysicsBodyAndNode.h
	../../PG/physics/PhysicsBodyCollection.cpp
	../../PG/physics/PhysicsBodyCollection.h
	../../PG/physics/PhysicsBodyInputHandler.cpp
	../../PG/physics/PhysicsBodyInputHandler.h
	../../PG/physics/PhysicsWorld.cpp
	../../PG/physics/PhysicsWorld.h
	../../PG/physics/PhysicsWorldParams.h
	../../PG/sound/ISoundController.h
	../../PG/sound/Sound.h
	../../PG/sound/SoundID.cpp
	../../PG/sound/SoundID.h
	../../PG/ui/Bar.cpp
	../../PG/ui/Bar.h
	../../PG/ui/Button.cpp
	../../PG/ui/Button.h
	../../PG/ui/Dialog.cpp
	../../PG/ui/Dialog.h
	../../PG/ui/TagReceiver.h
	../../PG/ui/UI.cpp
	../../PG/ui/UI.h
	../../PG/ui/UIElement.cpp
	../../PG/ui/UIElement.h
	../../PG/ui/UIMessage.cpp
	../../PG/ui/UIMessage.h
	../../PG/ui/UIMessageQueuePoster.cpp
	../../PG/ui/UIMessageQueuePoster.h
	../../PG/ui/UIPositionCalculator.cpp
	../../PG/ui/UIPositionCalculator.h
	../../PG/ui/UIUtils.cpp
	../../PG/ui/UIUtils.h
	../../PG/util/JsonUtils.cpp
	../../PG/util/JsonUtils.h
	../../PG/util/Logger.cpp
	../../PG/util/Logger.h
)

if(APPLE)
set(PLATFORM_SRCS
	../../PG/internal/platform/MacPlatformServices.mm
	../../PG/internal/platform/MacPlatformServices.h
)
endif()

if(WIN32)
set(PLATFORM_SRCS
	../../PG/internal/platform/WinPlatformServices.cpp  
	../../PG/internal/platform/WinPlatformServices.h
)
endif()

add_library(PG STATIC "${SRCS}" "${PLATFORM_SRCS}")
